# ken

./: .gitignore  README.md  Untitled.md  _.code-workspace  index.md  init.sh  ken.code-workspace  rsync.sh  setup.sh  sync.sh
.assets/embeddings/: kyoiku-1.md  kyoiku-2.md  (+4 more)
.github/: README.md
_/: README.md
_batch/: _.bat
_en/: README.md
_en-gb/: README.md
_en-us/: README.md
_ja/: README.md
_ja-jp/: README.md
_ko/: README.md
_ko-kp/: README.md
_ko-kr/: README.md
_pwsh/: _.ps1
_sh/: _.sh  batch.sh  cargo.sh  clang++.sh  clang.sh  cmake.sh  g++.sh  gcc.sh  pwsh.sh  py.sh  r.sh  rustc.sh
_vi/: README.md
_vi-vn/: README.md
_zh/: README.md
_zh-cn/: README.md
_zh-hk/: README.md
au-area/: README.md
batch/: README.md
c/: CMakeLists.txt
c-code/: README.md
c-inc/: README.md
cc-code/: README.md
cc-inc/: README.md
cc_std/: README.md
cn-area/: README.md
code/: README.md
docs/: README.md
en-lang/: README.md
games/: README.md
gb-area/: README.md
han-chars/: README.md
han-ko/: README.md
hk-area/: README.md
home/: README.md  en.md
ja-lang/: README.md
ja_characters/: README.md
ja_han/: README.md
jp-area/: README.md
ko-lang/: README.md
ko_han/: README.md
kp-area/: README.md
kr-area/: README.md
linux/: README.md
rs/: Cargo.toml  README.md
rs-code/: README.md
rs-io/: Cargo.toml
rs-lang/: README.md
rs-std/: README.md
rs_std/: README.md
tw-area/: README.md
us-area/: README.md
vi-lang/: README.md
vi_han/: README.md
vn-area/: README.md
zh-lang/: README.md
zh_han/: README.md
(+1071 files in other folders)
